--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 		<Header title={SITE_TITLE} />
 		<main>
 			<h1>🧑‍🚀 Hello, Astronaut Adam!</h1>
-			<h2>Thanks for showing up loser</h2>
+			<h2>Thanks for showing up you bunch boatload of clowns.</h2>
 			<p>Time to get busy coding. I'm sure this will be somewhat a learning curve but so far I like what I'm seeing with Astro.</p>
 			<p>
 				Listen to me, this is the official <a href="https://astro.build/">Astro</a> blog starter template. This
